completed with modification

--- a/404.html
+++ b/404.html
@@ -22,10 +22,9 @@
   <header>
     <div class="container">
       <nav class="head_content">
-        <div class="logo">
-          <!-- <a href="index.html"> Zakir <span>Soft</span> </a> -->
-          <img src="assets/images/logo/1.png" alt="brand-log">
-        </div>
+        <a href="index.html" class="logo">
+          <img src="assets/images/logo/1.png" alt="Zakir Soft">
+        </a>
         <div class="menu">
           <ul class="m_bar">
             <li></li>
