--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
   <header>
     <div class="container">
       <nav class="head_content">
-        <div class="logo">
-         <img src="assets/images/logo/1.png" alt="Zakir Soft">
-        </div>
+        <a href="index.html" class="logo">
+          <img src="assets/images/logo/1.png" alt="Zakir Soft">
+        </a>
         <div class="menu">
           <ul class="m_bar">
             <li></li>
@@ -145,7 +145,7 @@
               elementum diam elementum. Etiam elementum euismod commodo. Proin
               eleifend eget quam ut efficitur. Mauris a accumsan mauris.
             </p>
-            <a href="#" class="button">Join Our Team</a>
+            <a href="career.html" class="button">Join Our Team</a>
           </div>
         </div>
         <div class="col-lg-6 order-lg-0 order-1 r_space">
