--- a/details.html
+++ b/details.html
@@ -22,9 +22,9 @@
     <header>
         <div class="container">
             <nav class="head_content">
-                <div class="logo">
-                  <img src="assets/images/logo/1.png" alt="Zakir Soft">
-                </div>
+                <a href="index.html" class="logo">
+                    <img src="assets/images/logo/1.png" alt="Zakir Soft">
+                </a>
                 <div class="menu">
                     <ul class="m_bar">
                         <li></li>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="project_button">
                             <a class="button" href="#">View Project on live</a>
-                            <a href="#">View Project on live <img src="assets/images/Arrow-icon.png" alt="arrow_icon"></a>
+                            <a href="#" class="button border-0">View Project on live <img src="assets/images/Arrow-icon.png" alt="arrow_icon"></a>
                         </div>
                     </div>
                 </div>
@@ -179,8 +179,8 @@
     <!-- project-name area section end -->
     <section id="details_project">
         <div class="container">
-            <div class="row align-items-center mb-100">
-                <div class="col-4">
+            <div class="row align-items-center project_items mb-100">
+                <div class="col-lg-4 col-12 order-2">
                     <div class="project_info">
                         <p>Previous Projects</p>
                         <span class="p_type">Project Type</span>
@@ -191,14 +191,14 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-8">
+                <div class="col-lg-8 col-12 order-1">
                     <div class="project_img">
                         <img class="img-fluid" src="assets/images/project-img/img-1.png" alt="Project_img">
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center mb-100">
-                <div class="col-4">
+            <div class="row align-items-center project_items mb-100">
+                <div class="col-lg-4 col-12 order-2">
                     <div class="project_info">
                         <p>Next Projects</p>
                         <span class="p_type">Project Type</span>
@@ -209,7 +209,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-8">
+                <div class="col-lg-8 col-12 order-1">
                     <div class="project_img">
                         <img class="img-fluid" src="assets/images/project-img/img-1.png" alt="Project_img">
                     </div>
@@ -222,7 +222,7 @@
 
 
     <!-- footer section start -->
-    <footer id="footer_area" class="none">
+    <footer id="footer_area" class="none pt-0">
         <div class="container">
             <div class="row">
                 <div class="col-12">
