--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
   <header>
     <div class="container">
       <nav class="head_content">
-        <div class="logo">
-          <!-- <a href="index.html"> Zakir <span>Soft</span> </a> -->
+        <a href="index.html" class="logo">
           <img src="assets/images/logo/1.png" alt="Zakir Soft">
-        </div>
+        </a>
         <div class="menu">
           <ul class="m_bar">
             <li></li>
@@ -37,6 +36,7 @@
     </div>
   </header>
   <!-- Menus -->
+
   <div class="fullscreen-menu">
     <div class="menu-body">
       <div class="container">
@@ -96,7 +96,7 @@
               Curabitur vulputate arcu odio, ac facilisis diam accumsan ut. Ut
               imperdiet et leo in vulputate.
             </p>
-            <a class="button" href="#">View Projects</a>
+            <a class="button" href="work.html">View Projects</a>
           </div>
         </div>
         <div class="col-xl-5 order-1 order-xl-0">
