--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
   <header>
     <div class="container">
       <nav class="head_content">
-        <div class="logo">
-       <img src="assets/images/logo/1.png" alt="logo">
-        </div>
+        <a href="index.html" class="logo">
+          <img src="assets/images/logo/1.png" alt="Zakir Soft">
+        </a>
         <div class="menu">
           <ul class="m_bar">
             <li></li>
