--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -22,9 +22,9 @@
     <header>
         <div class="container">
           <nav class="head_content">
-            <div class="logo">
+            <a href="index.html" class="logo">
               <img src="assets/images/logo/1.png" alt="Zakir Soft">
-            </div>
+            </a>
             <div class="menu">
               <ul class="m_bar">
                 <li></li>
