fixed work slider spaceing & fixed card hover issues

--- a/index.html
+++ b/index.html
@@ -118,7 +118,24 @@
 
       <div class="row project_slider">
         <div class="slide_item row">
-          <div class="col-lg-4 col-12 order-lg-0 order-2">
+          <div class="col-lg-4  col-12 order-lg-0 order-2">
+            <div class="slide_info ml">
+              <span class="p_type">Project type</span>
+              <h3 class="p_title">Project name</h3>
+              <a class="v_project" href="#">
+                <span>View Project</span>
+                <img src="assets/images/Arrow-icon.png" alt="project-img" />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
+            <div class="project_img">
+              <img src="assets/images/project-img/img-7.png" alt="project-img" />
+            </div>
+          </div>
+        </div>
+        <div class="slide_item row">
+          <div class="col-lg-4  col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -135,7 +152,7 @@
           </div>
         </div>
         <div class="slide_item row">
-          <div class="col-lg-4 col-12 order-lg-0 order-2">
+          <div class="col-lg-4  col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -152,7 +169,7 @@
           </div>
         </div>
         <div class="slide_item row">
-          <div class="col-lg-4 col-12 order-lg-0 order-2">
+          <div class="col-lg-4  col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -169,7 +186,7 @@
           </div>
         </div>
         <div class="slide_item row">
-          <div class="col-lg-4 col-12 order-lg-0 order-2">
+          <div class="col-lg-4  col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -186,24 +203,7 @@
           </div>
         </div>
         <div class="slide_item row">
-          <div class="col-lg-4 col-12 order-lg-0 order-2">
-            <div class="slide_info">
-              <span class="p_type">Project type</span>
-              <h3 class="p_title">Project name</h3>
-              <a class="v_project" href="#">
-                <span>View Project</span>
-                <img src="assets/images/Arrow-icon.png" alt="project-img" />
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-8 col-12 order-lg-0 order-1">
-            <div class="project_img">
-              <img src="assets/images/project-img/img-7.png" alt="project-img" />
-            </div>
-          </div>
-        </div>
-        <div class="slide_item row">
-          <div class="col-lg-4 col-12 order-lg-0 order-2">
+          <div class="col-lg-4  col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -233,13 +233,13 @@
         <h2>What we do</h2>
       </div>
       <div class="row">
-        <div class="col-lg-6 col-12 mb-30">
+        <div class="col-xl-6  mb-30">
           <div class="box_wrapper">
             <div class="card_box">
-              <div class="front_part">
+              <div class="front_part face">
                 <h2>Front end <span class="text_stroke">Developer</span></h2>
               </div>
-              <div class="back_part">
+              <div class="back_part face">
                 <div class="box_title">
                   <h2>Front end Developer</h2>
                   <p>
@@ -254,13 +254,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-12 mb-30">
+        <div class="col-xl-6  mb-30">
           <div class="box_wrapper">
             <div class="card_box">
-              <div class="front_part">
+              <div class="front_part face">
                 <h2>Front end <span class="text_stroke">Developer</span></h2>
               </div>
-              <div class="back_part">
+              <div class="back_part face">
                 <div class="box_title">
                   <h2>Front end Developer</h2>
                   <p>
@@ -275,13 +275,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-12 mb-30">
+        <div class="col-xl-6  mb-30">
           <div class="box_wrapper">
             <div class="card_box">
-              <div class="front_part">
+              <div class="front_part face">
                 <h2>Front end <span class="text_stroke">Developer</span></h2>
               </div>
-              <div class="back_part">
+              <div class="back_part face">
                 <div class="box_title">
                   <h2>Front end Developer</h2>
                   <p>
@@ -296,13 +296,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-12">
+        <div class="col-xl-6  mb-30">
           <div class="box_wrapper">
             <div class="card_box">
-              <div class="front_part">
+              <div class="front_part face">
                 <h2>Front end <span class="text_stroke">Developer</span></h2>
               </div>
-              <div class="back_part">
+              <div class="back_part face">
                 <div class="box_title">
                   <h2>Front end Developer</h2>
                   <p>
