SEO title, description, preview image fix and update Image size and resulation compressed Preview image add

--- a/about.html
+++ b/about.html
@@ -4,12 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>zakirsoft</title>
   <!-- =========== Favicon ============ -->
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
   <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+  
+  <!-- =========== SEO Tags ============ -->
+  <title>About Us - Zakir Soft</title>
+  <meta name="author" content="Zakir Soft">  
+  <meta name="keywords" content="web design, web development, web development agency, agency, web, design, development, pwa, spa, web application development, website, website design, ecommerce website">
+  <meta name="description" content="Zakir Soft, A team of young designer and developers. We have frontend, backend, mobile application and UI/UX Design team. We provide complete web solution to any company.">
+  <meta property="og:title" content="About Us - Zakir Soft" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="assets/images/preview.jpg" />
 
+  <!-- =========== CSS URL ============ -->
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -95,12 +104,12 @@
               <div class="about_content_img_1">
                 <img src="assets/images/about/about3.png" alt="img" />
               </div>
-              <div class="play_video">
+              <!-- <div class="play_video">
                 <a href="https://www.youtube.com/watch?v=LOzUl2KStvA" class="popup-video">
                   <span class="play_icon"><img src="assets/images/icon.png" alt="icon" /> Play
                     Video</span>
                 </a>
-              </div>
+              </div> -->
             </div>
             <div class="col-lg-8 col-12 order-lg-0 order-1">
               <div class="about_content_img_2">
