--- a/work.html
+++ b/work.html
@@ -2,16 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zakirsoft</title>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- =========== Favicon ============ -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
     <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
-
-
+    
+    <!-- =========== SEO Tags ============ -->
+    <title> Portfolio - Zakir Soft </title>
+    <meta name="author" content="Zakir Soft">  
+    <meta name="keywords" content="web design, web development, web development agency, agency, web, design, development, pwa, spa, web application development, website, website design, ecommerce website">
+    <meta name="description" content="We work several trending technology, check our latest works in multiple category, including web design, web development & web application development. We work with Python, PHP, Laravel, PostgreSQL, MYSQL, Vue.js, React.js, Nuxt.js, Next.js, Cloud Server & much more.">
+    <meta property="og:title" content="Portfolio - Zakir Soft" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/images/preview.jpg" />
+  
+    <!-- =========== CSS URL ============ -->
     <link rel="stylesheet" href="assets/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
