--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>zakirsoft</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- =========== Favicon ============ -->
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
   <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+  
+  <!-- =========== SEO Tags ============ -->
+  <title> Contact Us - Zakir Soft </title>
+  <meta name="author" content="Zakir Soft">  
+  <meta name="keywords" content="web design, web development, web development agency, agency, web, design, development, pwa, spa, web application development, website, website design, ecommerce website">
+  <meta name="description" content="Zakir soft, A web design & development company in dhaka, bangldesh. Contact with your team to disucss for your project.">
+  <meta property="og:title" content="Contact Us - Zakir Soft" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="assets/images/preview.jpg" />
 
+  <!-- =========== CSS URL ============ -->
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
