--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>zakirsoft</title>
   <!-- =========== Favicon ============ -->
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
   <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+  
+  <!-- =========== SEO Tags ============ -->
+  <title>Zakir Soft - Website Design and Development Company in Dhaka, Bangladesh</title>
+  <meta name="author" content="Zakir Soft">  
+  <meta name="keywords" content="web design, web development, web development agency, agency, web, design, development, pwa, spa, web application development, website, website design, ecommerce website">
+  <meta name="description" content="We are a web design & development company in Dhaka, Bangladesh. We provide web design, web development, SPA, SSR & web application, development services.">
+  <meta property="og:title" content="Zakir Soft - Website Design and Development Company in Dhaka, Bangladesh" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="assets/images/preview.jpg" />
 
-
+  <!-- =========== CSS URL ============ -->
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
