--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -2,19 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zakirsoft</title>
-    <!-- =========== Favicon ============ -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- =========== Favicon ============ -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+  
+  <!-- =========== SEO Tags ============ -->
+  <title> Career - Zakir Soft </title>
+  <meta name="author" content="Zakir Soft">  
+  <meta name="keywords" content="web design, web development, web development agency, agency, web, design, development, pwa, spa, web application development, website, website design, ecommerce website">
+  <meta name="description" content="We are engertic team of designers and developers. We work with Python, PHP, Laravel, PostgreSQL, MYSQL, React.js, Vue.js, Nuxt.js, Next.js, Cloud Server. We are open to application, join us.">
+  <meta property="og:title" content="Career - Zakir Soft" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="assets/images/preview.jpg" />
 
-    <link rel="stylesheet" href="assets/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
+  <!-- =========== CSS URL ============ -->
+  <link rel="stylesheet" href="assets/css/all.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
