--- a/career.html
+++ b/career.html
@@ -84,59 +84,254 @@
         </div>
     </div>
     <!-- header section end -->
-    
-    <!-- joinus section start -->
-    <section id="joinus-area" class="none ">
+
+
+    <section class="careerTeam">
         <div class="container">
-            <div class="row section_title">
-                <h2>Join us</h2>
+          <div class="row">
+            <div class="col-lg-6 order-2 order-lg-0">
+              <div class="careerTeam__contentText">
+                <h5 class="careerTeam__title">Join Our Team</h5>
+                <p class="careerTeam__brief">
+                  Curabitur mollis elit eu libero eleifend, a aliquet magna
+                  consectetur. Fusce at accumsan quam. Ut maximus facilisis libero
+                  sit amet viverra. Nullam eu rutrum ex. Nullam consectetur turpis
+                  mi, id egestas urna mattis et.
+                </p>
+                <button class="zakirSoft__button px-4">
+                  <a href="#"> view all position </a>
+                </button>
+              </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="row join_team">
-                        <div class="col-lg-6 col-12">
-                            <div class="join-designer">
-                                <h2>UI/UX Design</h2>
-                                <p>You design website or mobile application.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <div class="join-designer-button text-lg-right">
-                                <a class="button" href="join-us-contact.html">I want this position</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row join_team">
-                        <div class="col-lg-6 col-12">
-                            <div class="join-designer">
-                                <h2>Back End Developer</h2>
-                                <p>You design website or mobile application.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <div class="join-designer-button text-lg-right">
-                                <a class="button" href="join-us-contact.html">I want this position</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row join_team">
-                        <div class="col-lg-6 col-12">
-                            <div class="join-designer">
-                                <h2>Front End Developer</h2>
-                                <p>You design website or mobile application.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <div class="join-designer-button text-lg-right">
-                                <a class="button" href="join-us-contact.html">I want this position</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-lg-6 order-1 order-lg-0">
+              <div class="careerTeam__contentImg">
+                <img
+                  src="assets/images/banner/Working late-bro.png"
+                  alt="contentImg"
+                />
+              </div>
             </div>
+          </div>
         </div>
-    </section>
-    <!-- joinus section end -->
+      </section>
+  
+      <section class="perks">
+        <div class="container perks__container">
+          <div class="row">
+            <div class="section">
+              <h5 class="section__title section__title_two">Perks & Benefits</h5>
+              <p class="section__brief">
+                Aenean vitae interdum leo. Donec luctus nulla eget leo fringilla
+                sollicitudin. Phasellus imperdiet nisl ut auctor ultricies. Morbi
+                vehicula, lorem ac consectetur accumsa
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="perks__benefitsBoxes">
+              <div class="box">
+                <img src="assets/images/perks/demo-01.png" alt="demo" />
+                <h5 class="box__title">
+                  Friendly <br />
+                  Environments
+                </h5>
+              </div>
+              <div class="box">
+                <img src="assets/images/perks/demo-02.png" alt="demo" />
+                <h5 class="box__title">
+                  Competitive <br />
+                  Salary
+                </h5>
+              </div>
+              <div class="box">
+                <img src="assets/images/perks/demo-03.png" alt="demo" />
+                <h5 class="box__title">
+                  Healthy Food & <br />
+                  Snacks
+                </h5>
+              </div>
+              <div class="box">
+                <img src="assets/images/perks/demo-04.png" alt="demo" />
+                <h5 class="box__title">
+                  Learning & <br />
+                  Developments
+                </h5>
+              </div>
+              <div class="box">
+                <img src="assets/images/perks/demo-05.png" alt="demo" />
+                <h5 class="box__title">
+                  Personal Career <br />
+                  Growth
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  
+      <!-- Gallery Section Start -->
+      <section class="gallery">
+        <div class="container">
+          <div class="row">
+            <div class="section">
+              <h5 class="section__title section__title_two">Our Gallery</h5>
+              <p class="section__brief">
+                Aenean vitae interdum leo. Donec luctus nulla eget leo fringilla
+                sollicitudin. Phasellus imperdiet nisl ut auctor ultricies. Morbi
+                vehicula, lorem ac consectetur accumsa
+              </p>
+            </div>
+          </div>
+          <div class="row gallery__itemContents">
+            <div class="col-md-4">
+              <div class="gallery__item">
+                <img
+                  src="assets/images/gallery/demo-01.png"
+                  alt="demo"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="gallery__item">
+                <img
+                  src="assets/images/gallery/demo-02.png"
+                  alt="demo"
+                  class="img-fluid mt-20"
+                />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="gallery__item">
+                <img
+                  src="assets/images/gallery/demo-03.png"
+                  alt="demo"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="gallery__item">
+                <img
+                  src="assets/images/gallery/demo-04.png"
+                  alt="demo"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="gallery__item">
+                <img
+                  src="assets/images/gallery/demo-05.png"
+                  alt="demo"
+                  class="img-fluid mt-20"
+                />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="gallery__item">
+                <img
+                  src="assets/images/gallery/demo-06.png"
+                  alt="demo"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Gallery Section End -->
+  
+      <section class="positions">
+        <div class="container positions__container">
+          <div class="row">
+            <div class="section">
+              <h5 class="section__title section__title_two">
+                All open positions
+              </h5>
+              <p class="section__brief">
+                Aenean vitae interdum leo. Donec luctus nulla eget leo fringilla
+                sollicitudin. Phasellus imperdiet nisl ut auctor ultricies. Morbi
+                vehicula, lorem ac consectetur accumsa
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="positions__item">
+              <div class="positions__contentBox">
+                <div class="postions__left">
+                  <h5 class="positions__title">UI/UX Designer</h5>
+                  <div class="positions__type">
+                    Job Type: <span class="type">Full Time</span>
+                    <span class="point"></span> Salary Range:
+                    <span class="range">50k to 70k</span>
+                  </div>
+                  <div class="positions__responsiblity">
+                    Website and mobile application Designer
+                  </div>
+                </div>
+                <div class="positions__right">
+                  <button class="zakirSoft__button">
+                    <a href="careerDetail.html">
+                      I want this position
+  
+                      <span><i class="fas fa-arrow-right"></i></span>
+                    </a>
+                  </button>
+                </div>
+              </div>
+              <div class="positions__contentBox">
+                <div class="postions__left">
+                  <h5 class="positions__title">php Developer</h5>
+                  <div class="positions__type">
+                    Job Type: <span class="type">Full Time</span>
+                    <span class="point"></span> Salary Range:
+                    <span class="range">50k to 70k</span>
+                  </div>
+                  <div class="positions__responsiblity">
+                    Website and mobile application Designer
+                  </div>
+                </div>
+                <div class="positions__right">
+                  <button class="zakirSoft__button">
+                    <a href="careerDetail.html">
+                      I want this position
+  
+                      <span><i class="fas fa-arrow-right"></i></span>
+                    </a>
+                  </button>
+                </div>
+              </div>
+              <div class="positions__contentBox">
+                <div class="postions__left">
+                  <h5 class="positions__title">Video Editor</h5>
+                  <div class="positions__type">
+                    Job Type: <span class="type">part Time</span>
+                    <span class="point"></span> Salary Range:
+                    <span class="range">50k to 70k</span>
+                  </div>
+                  <div class="positions__responsiblity">
+                    Website and mobile application Designer
+                  </div>
+                </div>
+                <div class="positions__right">
+                  <button class="zakirSoft__button">
+                    <a href="careerDetail.html">
+                      I want this position
+  
+                      <span><i class="fas fa-arrow-right"></i></span>
+                    </a>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  
+
+
+
     <!-- footer section start -->
     <footer id="footer_area" class="none pt-0">
         <div class="container">
