--- a/index.html
+++ b/index.html
@@ -438,6 +438,206 @@
   </section>
   <!-- testimonial section end -->
 
+      <!-- Projects Section Start -->
+      <section class="p-0">
+        <div class="latestProject latestProject--one">
+          <div class="container latestProject__container">
+            <div class="row">
+              <div class="col-lg-6 order-2 order-lg-0">
+                <div class="latestProject__contentText">
+                  <div class="latestProject__logo">
+                    <img src="assets/images/brandLogo/e.png " alt="brandLogo" />
+                  </div>
+                  <h5 class="latestProject__title">Echotemplate</h5>
+                  <div class="latestProject__projectInfo">
+                    <div class="latestProject__info">
+                      <h5>100+</h5>
+                      <p>Product Download</p>
+                    </div>
+                    <div class="latestProject__info">
+                      <h5>500+</h5>
+                      <p>Product view</p>
+                    </div>
+                  </div>
+                  <p class="latestProject__brief">
+                    Praesent porttitor quam lacus, quis rhoncus ligula iaculis
+                    pharetra. Phasellus vitae tellus justo. Donec tellus eros,
+                    feugiat vel augue vel, vehicula luctus ex. Vestibulum semper a
+                    ante at maximus. In fringilla condimentum mauris, non
+                    efficitur ex tincidunt non.
+                  </p>
+  
+                  <button class="zakirSoft__button">
+                    <a href="#">
+                      Launch Echotemplate
+  
+                      <span
+                        ><img src="assets/images/icons/arrow.png" alt="arrow"
+                      /></span>
+                    </a>
+                  </button>
+                </div>
+              </div>
+              <div class="col-lg-6 order-1 order-lg-0">
+                <div
+                  class="latestProject__imgContent latestProject__imgContent_one"
+                >
+                  <img
+                    src="assets/images/projects/echoTemplate.png"
+                    alt="echotemplate"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <div class="latestProject latestProject--two">
+          <div class="container latestProject__container">
+            <div class="row">
+              <div class="col-lg-6 order-2a order-lg-0">
+                <div
+                  class="latestProject__imgContent latestProject__imgContent_two"
+                >
+                  <img
+                    src="assets/images/projects/codeshiki.png"
+                    alt="codeshiki"
+                  />
+                </div>
+              </div>
+              <div class="col-lg-6 order-1 order-lg-0">
+                <div
+                  class="latestProject__contentText latestProject__contentText_two"
+                >
+                  <div class="latestProject__logo latestProject__logo_codeshikhi">
+                    <img src="assets/images/brandLogo/c.png " alt="brandLogo" />
+                  </div>
+                  <h5 class="latestProject__title">Codeshikhi</h5>
+                  <div class="latestProject__projectInfo">
+                    <div class="latestProject__info">
+                      <h5>100+</h5>
+                      <p>Product Download</p>
+                    </div>
+                    <div class="latestProject__info">
+                      <h5>500+</h5>
+                      <p>Product view</p>
+                    </div>
+                  </div>
+                  <p class="latestProject__brief">
+                    Praesent porttitor quam lacus, quis rhoncus ligula iaculis
+                    pharetra. Phasellus vitae tellus justo. Donec tellus eros,
+                    feugiat vel augue vel, vehicula luctus ex. Vestibulum semper a
+                    ante at maximus. In fringilla condimentum mauris, non
+                    efficitur ex tincidunt non.
+                  </p>
+  
+                  <button class="zakirSoft__button">
+                    <a href="#">
+                      Launch codeshikhi
+  
+                      <span
+                        ><img src="assets/images/icons/arrow.png" alt="arrow"
+                      /></span>
+                    </a>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Projects Section End -->
+  
+      <!-- Article/Blog Section Start  -->
+      <div class="articles">
+        <div class="container">
+          <div class="row">
+            <div class="section w-100">
+              <h2 class="section__title section__title_one text-center">
+                What’s coming next
+              </h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="articles__contentBox card">
+                <div class="articles__contentImg">
+                  <img
+                    src="assets/images/Articles/demo-01.png "
+                    alt="artilce01"
+                  />
+                </div>
+                <div class="articles__contentText">
+                  <a class="articles__title">We are Hiring</a>
+                  <p class="articles__brief">
+                    Curabitur mollis elit eu libero eleifend, a aliquet magna
+                    consectetur. Fusce at accumsan quam. Ut maximus facilisis
+                    libero sit amet viverra. Nullam eu rutrum ex.
+                  </p>
+                  <a href="#" class="articles__readMore"
+                    >Read More
+                    <span
+                      ><img src="assets/images/icons/arrow.png" alt="arrow"
+                    /></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="articles__contentBox card">
+                <div class="articles__contentImg">
+                  <img
+                    src="assets/images/Articles/demo-02.png "
+                    alt="artilce01"
+                  />
+                </div>
+                <div class="articles__contentText">
+                  <h5 class="articles__title">We are Hiring</h5>
+                  <p class="articles__brief">
+                    Curabitur mollis elit eu libero eleifend, a aliquet magna
+                    consectetur. Fusce at accumsan quam. Ut maximus facilisis
+                    libero sit amet viverra. Nullam eu rutrum ex.
+                  </p>
+                  <a href="#" class="articles__readMore"
+                    >Read More
+                    <span
+                      ><img src="assets/images/icons/arrow.png" alt="arrow"
+                    /></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="articles__contentBox card">
+                <div class="articles__contentImg">
+                  <img
+                    src="assets/images/Articles/demo-03.png "
+                    alt="artilce01"
+                  />
+                </div>
+                <div class="articles__contentText">
+                  <h5 class="articles__title">We are Hiring</h5>
+                  <p class="articles__brief">
+                    Curabitur mollis elit eu libero eleifend, a aliquet magna
+                    consectetur. Fusce at accumsan quam. Ut maximus facilisis
+                    libero sit amet viverra. Nullam eu rutrum ex.
+                  </p>
+                  <a href="#" class="articles__readMore"
+                    >Read More
+                    <span
+                      ><img src="assets/images/icons/arrow.png" alt="arrow"
+                    /></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Article/Blog Section End -->
+
+
+
   <!-- footer section start -->
   <footer id="footer_area" class="none">
     <div class="container">
