--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
   <link rel="stylesheet" href="assets/css/slick.css">
+  <link rel="stylesheet" href="assets/css/simple-lightbox.min.css">
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -705,6 +706,7 @@
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/slick.min.js"></script>
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/simple-lightbox.jquery.min.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 
